# MagentaRT-jamcli

./: .gitignore  README.md  example-config.toml  magenta_rt_audio_injection.py  pyproject.toml
magenta_rt_jamcli/: __init__.py  audio_injection.py  audio_stream.py  cli.py  config.py  model_manager.py  tui.py  tui_config.py
